2004-04-22  Sigurd Gartmann  <sigurd-translate@brogar.org>
	* no.po: Updated Norwegian BokmÃ¥l translation (Work by Runar Ingebrigtsen)


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13062 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-22  Sigurd Gartmann  <sigurd-translate@brogar.org>
+
+	* no.po: Updated Norwegian Bokmål translation (Work by Runar Ingebrigtsen)
+
 2004-04-21  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added new files.
