--- a/po-libgimp/no.po
+++ b/po-libgimp/no.po
@@ -1,26 +1,31 @@
 # Norwegian translation of gimp-modules.
 # Copyright (C) 1999-2001 Free Software Foundation, Inc.
 # Kjartan Maraas <kmaraas@gnome.org>, 1999-2001.
+# Runar Ingebrigtsen <ringe@skolelinux.no>, 2004
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GIMP 1.2.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2003-01-26 17:30+0100\n"
-"Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
+"POT-Creation-Date: 2004-04-22 12:54+0200\n"
+"PO-Revision-Date: 2004-04-22 00:59+0200\n"
+"Last-Translator: Runar Ingebrigtsen <ringe@skolelinux.no>\n"
 "Language-Team: Norwegian <no@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8-bit\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: libgimp/gimpbrushmenu.c:132
-#, fuzzy
 msgid "Brush Selection"
-msgstr "Utvalg for enhet"
+msgstr "Penselvalg"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
+msgstr "_Bla gjennom..."
+
+#: libgimp/gimpdrawablecombobox.c:283 libgimp/gimpimagecombobox.c:147
+#: libgimp/gimpmenu.c:411
+msgid "(Empty)"
 msgstr ""
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
@@ -57,13 +62,13 @@ msgid "%s can't handle transparency"
 msgstr "%s kan ikke håndtere gjennomsiktighet"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "%s kan ikke håndtere lag"
+msgstr "%s kan ikke håndtere lagmasker"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "Bruk lagmasker"
 
 #: libgimp/gimpexport.c:278
 #, c-format
@@ -98,17 +103,16 @@ msgstr ""
 "finjustere resultatet)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "%s kan kun håndtere RGB eller indekserte bilder"
+msgstr "%s kan kun håndtere indekserte punktgrafikkbilder (i to farger)"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
-"Konverter til indeksert og bruk standard\n"
+"Konverter til indeksert ved bruk av standard-\n"
 "innstillinger (Gjør det manuelt for å\n"
 "finjustere resultatet)"
 
@@ -149,22 +153,20 @@ msgid "Export File"
 msgstr "Eksporter fil"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "Ignorer"
+msgstr "_Ignorer"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "Eksporter"
+msgstr "_Eksporter"
 
 #. the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
-msgstr "Du bør eksportere bildet ditt før det kan lagres av følgende gunner:"
+msgstr "Bildet bør eksporteres før det kan lagres som %s av følgende årsaker:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
@@ -189,23 +191,16 @@ msgstr ""
 "Dette vil ikke lagre synlige lag."
 
 #: libgimp/gimpfontmenu.c:89
-#, fuzzy
 msgid "Font Selection"
-msgstr "Utvalg for enhet"
+msgstr "Skrifttypevalg"
 
 #: libgimp/gimpgradientmenu.c:103
-#, fuzzy
 msgid "Gradient Selection"
-msgstr "Utvalg for enhet"
-
-#: libgimp/gimpmenu.c:407
-msgid "None"
-msgstr "Ingen"
+msgstr "Graderingsvalg"
 
 #: libgimp/gimppatternmenu.c:115
-#, fuzzy
 msgid "Pattern Selection"
-msgstr "Utvalg for enhet"
+msgstr "Mønstervalg"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
@@ -213,57 +208,57 @@ msgstr "prosent"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(ugyldig «UTF-8»-streng)"
 
 #: libgimpbase/gimputils.c:244
 #, c-format
 msgid "%d Bytes"
-msgstr ""
+msgstr "%d Bytes"
 
 #: libgimpbase/gimputils.c:249
 #, c-format
 msgid "%.2f KB"
-msgstr ""
+msgstr "%.2f KB"
 
 #: libgimpbase/gimputils.c:253
 #, c-format
 msgid "%.1f KB"
-msgstr ""
+msgstr "%.1f KB"
 
 #: libgimpbase/gimputils.c:257
 #, c-format
 msgid "%d KB"
-msgstr ""
+msgstr "%d KB"
 
 #: libgimpbase/gimputils.c:264
 #, c-format
 msgid "%.2f MB"
-msgstr ""
+msgstr "%.2f MB"
 
 #: libgimpbase/gimputils.c:268
 #, c-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f MB"
 
 #: libgimpbase/gimputils.c:272
 #, c-format
 msgid "%d MB"
-msgstr ""
+msgstr "%d MB"
 
 #: libgimpbase/gimputils.c:279
 #, c-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f GB"
 
 #: libgimpbase/gimputils.c:283
 #, c-format
 msgid "%.1f GB"
-msgstr ""
+msgstr "%.1f GB"
 
 #: libgimpbase/gimputils.c:287
 #, c-format
 msgid "%d GB"
-msgstr ""
+msgstr "%d GB"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
@@ -273,11 +268,9 @@ msgstr "Laster modul: «%s»\n"
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
-#, fuzzy, c-format
+#, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
-"Feil under lasting av modul «%s»:\n"
-"%s"
+msgstr "Modul «%s» kunne ikke lastes: %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
@@ -303,27 +296,23 @@ msgstr "Ikke lastet"
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "Kunne ikke opprette miniatyrbildemappe «%s.»"
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/Forgrunnsfarge"
+msgstr "/_Forgrunnsfarge"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/Bakgrunnsfarge"
+msgstr "/_Bakgrunnsfarge"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/Sort"
+msgstr "/_Sort"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/Hvit"
+msgstr "/_Hvit"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
@@ -362,7 +351,7 @@ msgid "Hue"
 msgstr "Glød"
 
 #: libgimpwidgets/gimpcolorscales.c:175 libgimpwidgets/gimpcolorselect.c:358
-#: modules/cdisplay_proof.c:323
+#: modules/cdisplay_proof.c:318
 msgid "Saturation"
 msgstr "Metning"
 
@@ -396,41 +385,39 @@ msgstr "Heksadesimal triplet"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Nåværende:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Gammel:"
 
-#: libgimpwidgets/gimpfileentry.c:350
+#: libgimpwidgets/gimpfileentry.c:351
 msgid "Select Folder"
 msgstr "Velg mappe"
 
-#: libgimpwidgets/gimpfileentry.c:364
+#: libgimpwidgets/gimpfileentry.c:353
 msgid "Select File"
 msgstr "Velg fil"
 
-#: libgimpwidgets/gimpmemsizeentry.c:234
+#: libgimpwidgets/gimpmemsizeentry.c:232
 msgid "KiloBytes"
 msgstr "KiloBytes"
 
-#: libgimpwidgets/gimpmemsizeentry.c:235
+#: libgimpwidgets/gimpmemsizeentry.c:233
 msgid "MegaBytes"
 msgstr "MegaBytes"
 
-#: libgimpwidgets/gimpmemsizeentry.c:236
+#: libgimpwidgets/gimpmemsizeentry.c:234
 msgid "GigaBytes"
 msgstr "GigaBytes"
 
 #: libgimpwidgets/gimppatheditor.c:243
-#, fuzzy
 msgid "Writable"
-msgstr "_Trekant"
+msgstr "Skrivbar"
 
 #: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
 msgid "Folder"
-msgstr "Velg mappe"
+msgstr "Mappe"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
@@ -520,7 +507,7 @@ msgstr "Enhet"
 msgid "Factor"
 msgstr "Faktor"
 
-#: libgimpwidgets/gimpwidgets.c:1291
+#: libgimpwidgets/gimpwidgets.c:808
 msgid ""
 "Use this value for random number generator seed - this allows you to repeat "
 "a given \"random\" operation"
@@ -528,16 +515,16 @@ msgstr ""
 "Bruk denne verdien som startverdi for generering av tilfeldige tall - dette "
 "lar deg gjenta en gitt «tilfeldig» operasjon"
 
-#: libgimpwidgets/gimpwidgets.c:1295
+#: libgimpwidgets/gimpwidgets.c:812
 msgid "_New Seed"
-msgstr ""
+msgstr "_Nytt frø"
 
-#: libgimpwidgets/gimpwidgets.c:1308
+#: libgimpwidgets/gimpwidgets.c:825
 msgid "Seed random number generator with a generated random number"
 msgstr ""
 "Gi generator for tilfeldige tall et generert tilfeldig tall som startverdi"
 
-#: libgimpwidgets/gimpwidgets.c:1312
+#: libgimpwidgets/gimpwidgets.c:829
 #, fuzzy
 msgid "_Randomize"
 msgstr "Gjø_r tilfeldig"
@@ -551,19 +538,18 @@ msgid "Color Deficient Vision"
 msgstr "Fargesvakt syn"
 
 #: modules/cdisplay_colorblind.c:464
-#, fuzzy
 msgid "Color _Deficiency Type:"
-msgstr "Type fargesvakt syn:"
+msgstr "Fargeblin_dhetstype:"
 
-#: modules/cdisplay_colorblind.c:473
+#: modules/cdisplay_colorblind.c:469
 msgid "Protanopia (insensitivity to red)"
 msgstr "Protanopi (usensitiv for rød)"
 
-#: modules/cdisplay_colorblind.c:476
+#: modules/cdisplay_colorblind.c:471
 msgid "Deuteranopia (insensitivity to green)"
 msgstr "Deuteranopi (usensitiv for grønn)"
 
-#: modules/cdisplay_colorblind.c:479
+#: modules/cdisplay_colorblind.c:473
 msgid "Tritanopia (insensitivity to blue)"
 msgstr "Tritanopi (usensitiv for blå)"
 
@@ -576,131 +562,122 @@ msgid "Gamma"
 msgstr "Gamme"
 
 #: modules/cdisplay_gamma.c:311
-#, fuzzy
 msgid "_Gamma:"
-msgstr "Gamme:"
+msgstr "_Gamma:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
-msgstr "Visningsfilter for farger med høy kontrast"
+msgstr "Visningsfilter for høykontrastfarger"
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
 msgstr "Kontrast"
 
 #: modules/cdisplay_highcontrast.c:308
-#, fuzzy
 msgid "Contrast C_ycles:"
-msgstr "Kontrastsykluser:"
+msgstr "_Kontrastsykluser:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Fargeprøvefilter for ICC fargeprofil"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Fargeprøve"
 
-#: modules/cdisplay_proof.c:319
+#: modules/cdisplay_proof.c:314
 msgid "Perceptual"
-msgstr ""
+msgstr "Perseptuell"
 
-#: modules/cdisplay_proof.c:321
+#: modules/cdisplay_proof.c:316
+#, fuzzy
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Relativ fastsetting av farge"
 
-#: modules/cdisplay_proof.c:325
+#: modules/cdisplay_proof.c:320
+#, fuzzy
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Absolutt fastsetting av farge"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Hensikt:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Velg en ICC fargeprofil"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Profil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "_Svartpunktskompensering"
 
 #: modules/colorsel_cmyk.c:73
-#, fuzzy
 msgid "CMYK color selector"
-msgstr "Fargevelger i vannfargestil"
+msgstr "CMYK fargevelger"
 
 #: modules/colorsel_cmyk.c:132
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #: modules/colorsel_cmyk.c:149
 msgid "_C"
-msgstr ""
+msgstr "_C"
 
 #: modules/colorsel_cmyk.c:150
 msgid "_M"
-msgstr ""
+msgstr "_M"
 
 #: modules/colorsel_cmyk.c:151
 msgid "_Y"
-msgstr ""
+msgstr "_Y"
 
 #: modules/colorsel_cmyk.c:152
 msgid "_K"
-msgstr ""
+msgstr "_K"
 
 #: modules/colorsel_cmyk.c:156
-#, fuzzy
 msgid "Cyan"
-msgstr "Avbryt"
+msgstr "Cyan"
 
 #: modules/colorsel_cmyk.c:157
 msgid "Magenta"
-msgstr ""
+msgstr "Magenta"
 
 #: modules/colorsel_cmyk.c:158
 msgid "Yellow"
-msgstr ""
+msgstr "Yellow"
 
 #: modules/colorsel_cmyk.c:159
-#, fuzzy
 msgid "Black"
-msgstr "/Sort"
+msgstr "Sort"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "Begrensing av sort (%):"
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
 msgstr "Fargevelger i malerstil"
 
 #: modules/colorsel_triangle.c:182
-#, fuzzy
 msgid "Triangle"
-msgstr "_Trekant"
+msgstr "Trekant"
 
 #: modules/colorsel_water.c:104
 msgid "Watercolor style color selector"
 msgstr "Fargevelger i vannfargestil"
 
 #: modules/colorsel_water.c:176
-#, fuzzy
 msgid "Watercolor"
-msgstr "_Vannmerke"
+msgstr "Vannfarge"
 
 #: modules/colorsel_water.c:251
 msgid "Pressure"
 msgstr "Trykk"
 
-#, fuzzy
-#~ msgid "Parameter Settings"
-#~ msgstr "Utvalg for enhet"
-
-#~ msgid "None (normal vision)"
-#~ msgstr "Ingen (vanlig syn)"
+#~ msgid "None"
+#~ msgstr "Ingen"
