--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-22  Sigurd Gartmann  <sigurd-translate@brogar.org>
+
+	* no.po: Updated Norwegian Bokmål translation (Work by Runar Ingebrigtsen)
+
 2004-04-16  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* uk.po: Updated Ukrainian translation.
