2004-04-22  Sven Neumann  <sven@gimp.org>
	* de.po: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13063 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,6 +1,11 @@
+2004-04-22  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated.
+
 2004-04-22  Sigurd Gartmann  <sigurd-translate@brogar.org>
 
-	* no.po: Updated Norwegian Bokmål translation (Work by Runar Ingebrigtsen)
+	* no.po: Updated Norwegian Bokmål translation (Work by Runar
+	Ingebrigtsen)
 
 2004-04-21  Sven Neumann  <sven@gimp.org>
 
