--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-04-22  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/rcm/rcm_callback.[ch]
+	* plug-ins/rcm/rcm_dialog.c: ported from GtkOptionMenu to
+	GimpIntComboBox.
+
+2004-04-22  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpintstore.[ch]: automatically add an "(Empty)"
 	item if the store is empty and remove it as soon as other items
 	are being added.
