--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-04-22  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpactiongroup.[ch]: implemented
+	gimp_action_group_set_action_color() and
+	gimp_action_group_set_action_viewable().
+
+	* app/actions/*-actions.c: added stock IDs to all actions which
+	represent toplevel popup menus. Fixed typos.
+
+	* menus/brushes-menu.xml
+	* menus/colormap-editor-menu.xml
+	* menus/dockable-menu.xml
+	* menus/gradients-menu.xml
+	* menus/patterns-menu.xml
+	* menus/toolbox-menu.xml: fixed typos.
+
 2004-04-22  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/rcm/rcm_callback.[ch]
