2004-04-22  Michael Natterer  <mitch@gimp.org>
	* app/gui/menus.c (menus_init): fixed some typos in the UI Manager
	registration code.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13068 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-22  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/menus.c (menus_init): fixed some typos in the UI Manager
+	registration code.
+
+2004-04-22  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpactiongroup.[ch]: implemented
 	gimp_action_group_set_action_color() and
 	gimp_action_group_set_action_viewable().
