* POTFILES.in: Removed app/gui/*-commands.c
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13069 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-22  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Removed app/gui/*-commands.c
+
 2004-04-17  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
