* po/en_CA.po 	  po-libgimp/en_CA.po 	  po-plug-ins/en_CA.po 	  po-script-fu/en_CA.po:
	  Updated Canadian English translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13070 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-22  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-04-22  Sigurd Gartmann  <sigurd-translate@brogar.org>
 
 	* no.po: Updated Norwegian Bokmål translation (Work by Runar Ingebrigtsen)
