--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-22  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-04-16  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* uk.po: Updated Ukrainian translation
