--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-22  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/gflare/gflare.c: ported the last plug-in from
+	GtkOptionMenu to GimpIntComboBox.
+
+	* plug-ins/common/newsprint.c: changed a comment that was still
+	talking about option menus.
+
 2004-04-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/menus.c (menus_init): fixed some typos in the UI Manager
