2004-04-22  Sven Neumann  <sven@gimp.org>
	* app/gui/dialogs-constructors.c
	* app/gui/preferences-dialog.c: silent the compiler.

	* plug-ins/winicon/icodialog.c: simplified by using a
	GimpIntComboBox.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13073 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-22  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/dialogs-constructors.c
+	* app/gui/preferences-dialog.c: silent the compiler.
+
+	* plug-ins/winicon/icodialog.c: simplified by using a
+	GimpIntComboBox.
+
 2004-04-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpuimanager.[ch]: remember and ref the created
