--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-25  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/AlienMap2.c: some UI improvements based on a
+	patch by William Skaggs (bug #140079).
+
 2004-04-22  Sven Neumann  <sven@gimp.org>
 
 	* app/gui/dialogs-constructors.c
