2004-04-25  Michael Natterer  <mitch@gimp.org>
	* app/core/gimp.[ch]: changed GimpMenusDeleteFunc to take
	a PlugInProcDef* instead of a const gchar*.

	* app/plug-in/plug-ins.c
	* app/gui/gui-vtable.c
	* app/gui/plug-in-menus.[ch]: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13076 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-04-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimp.[ch]: changed GimpMenusDeleteFunc to take
+	a PlugInProcDef* instead of a const gchar*.
+
+	* app/plug-in/plug-ins.c
+	* app/gui/gui-vtable.c
+	* app/gui/plug-in-menus.[ch]: changed accordingly.
+
 2004-04-25  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/AlienMap2.c: some UI improvements based on a
