--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-26  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2004-04-24  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
