--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-27  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/gui.c (gui_restore_callback): call actions_init()
+	(gui_exit_after_callback): call actions_exit().
+
+	* app/gui/menus.c (menus_init)
+	(menu_exit): don't call them here.
+
 2004-04-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/widgets-types.h: added GimpUIManagerSetupFunc typedef.
